Updated reports to incorporate Polymorphism Requirement